@@ -110,10 +110,18 @@
 	</TR>
 	<TR CLASS="LIGHT">
 		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
-			<IMG src="img/report.gif" width="16" alt=""> <B>{t}RBE:{/t}</B>
+			<IMG src="img/report.gif" alt=""> <B>{t}RBE:{/t}</B>
 		</TD>
 		<TD CLASS="fright" WIDTH="99%">
 			<INPUT TYPE="text" NAME="search[rbe]" VALUE="{$search.rbe}">
+		</TD>
+	</TR>
+	<TR CLASS="LIGHT">
+		<TD CLASS="fleft" WIDTH="1%" NOWRAP>
+			<IMG src="img/note.gif" alt=""> <B>{t}Notes:{/t}</B>
+		</TD>
+		<TD CLASS="fright" WIDTH="99%">
+			<INPUT TYPE="text" NAME="search[notes]" VALUE="{$search.notes}">
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
